--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,21 @@ jobs:
                 --template-file template.yml \
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                 --region us-east-1
+
+  launch_ec2_webserver:
+      steps:
+        - checkout
+        - run:
+            name: create webserver
+            command: |
+              ansible-playbook \
+                main-remote.yml \
+                -i inventory \
+                --private-key project_udacity    
 # Sequential workflow
 workflows:
   # Name the workflow
   cloudworkflows:
     jobs:
       - create_infrastructure
+      - launch_ec2_webserver
