--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ orbs:
   aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
 jobs:
+  # Exercise: Create and Deployment
   create_infrastructure: 
       docker:
         - image: amazon/aws-cli
@@ -18,10 +19,28 @@ jobs:
                 --template-file template.yml \
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                 --region us-east-1
+  # Exercise: Config and Deployment
+  configure_infrastructure: 
+    docker:
+      - image: 
+    steps:
+      - checkout
+      - add_ssh_keys:
+              # You can get this ID in the section where you registered the SSH Key
+              fingerprints: ["XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX"] 
+      - run:
+          name: Install Ansible
+          command: |
+            # Install Ansible
+      - run:
+          name: Run Playbook and Configure server
+          command: |
+            # Your command
   
 # Sequential workflow
 workflows:
   # Name the workflow
   cloudworkflows:
     jobs:
-      - create_infrastructure
+      # - create_infrastructure
+      - configure_infrastructure
