--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
   # Exercise: Config and Deployment
   configure_infrastructure: 
     docker:
-      - image: 
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
       - add_ssh_keys:
@@ -31,7 +31,7 @@ jobs:
       - run:
           name: Install Ansible
           command: |
-            # Install Ansible
+            apk add --update ansible
       - run:
           name: Run Playbook and Configure server
           command: |
