--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - run:
           name: Run Playbook and Configure server
           command: |
-            ansible-playbook -i inventory-file main.yml
+            ansible-playbook -i inventory main.yml
   
 # Sequential workflow
 workflows:
