--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,5 +61,5 @@ workflows:
   cloudworkflows:
     jobs:
       # - create_infrastructure
-      - configure_infrastructure
-      #- smoke_test
+      #- configure_infrastructure
+      - smoke_test
