--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,6 @@ workflows:
   # Name the workflow
   cloudworkflows:
     jobs:
-      - create_infrastructure
-      #- configure_infrastructure
+      #- create_infrastructure
+      - configure_infrastructure
       #- smoke_test
