add bucket name to bucket.yml

--- a/bucket.yml
+++ b/bucket.yml
@@ -1,7 +1,7 @@
 Parameters:
   # New Bucket name
   MyBucketName:
-    Description: Existing Bucket name
+    Description: mybucket1975779
     Type: String
 
 Resources:
