--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,20 @@ jobs:
                 --parameter-overrides PipelineID="mybucket1975779" \ 
                 --tags project=udapeople &
 
+  create_and_deploy_front_end:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Execute bucket.yml - Create Cloudformation Stack
+          command: |
+            aws cloudformation deploy \
+            --template-file bucket.yml \
+            --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
+            --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
+      
+
           
 # Sequential workflow
 workflows:
