edit and add bucket name

--- a/cloudfront.yml
+++ b/cloudfront.yml
@@ -1,7 +1,7 @@
 Parameters:
 # Existing Bucket name
 PipelineID:
-  Description: Existing Bucket name
+  Description: mybucket1975779
   Type: String
 Resources:
     CloudFrontOriginAccessIdentity:
